Replaced float right with flex ends and fixed spacing issues on tour page 3

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -393,7 +393,6 @@ i {
   color: white;
   font-family: "Gloria Hallelujah", sans-serif;
   font-size: 1.5rem;
-  float: right;
   padding-right: 2rem;
 }
 
@@ -855,7 +854,6 @@ i {
 }
 
 .close-study {
-  float: right;
   padding-right: 1.25rem;
   padding-top: 1rem;
   background: transparent;
@@ -915,6 +913,7 @@ i {
 
 .text-box,
 .text-box-2,
+.text-box-3,
 .text-box-4 {
   border-radius: 0.5rem;
   font-family: "Gloria Hallelujah", sans-serif;
@@ -956,10 +955,16 @@ i {
   left: 50%;
 }
 
-.main-box-text {
+.main-box-text,
+.main-box-text-4,
+.main-box-text-5 {
   width: 90%;
   font-size: 1.25rem;
   padding-left: 1.5rem;
+}
+
+.main-box-text-4,
+.main-box-text-5 {
   padding-top: 1rem;
 }
 
@@ -974,10 +979,19 @@ i {
   width: 50%;
   position: absolute;
   right: 1rem;
+  bottom: 30%;
+}
+
+.tour-image-3 {
+  width: 50%;
+  position: absolute;
+  right: 1rem;
+  bottom: 10%;
 }
 
 .tour-folder {
-  margin-top: 10rem;
+  position: absolute;
+  margin: 10rem auto 0;
 }
 
 .get-started-button {
@@ -1276,19 +1290,23 @@ i {
 
   .text-box,
   .text-box-2,
+  .text-box-3,
   .text-box-4 {
     width: 25%;
     height: 25vh;
     margin-right: 4rem;
-    float: right;
   }
 
   .text-box-2 {
-    margin-top: 6rem;
+    margin-top: 4rem;
+  }
+
+  .text-box-3 {
+    margin-top: 13rem;
   }
 
   .text-box-4 {
-    margin-top: 8.5rem;
+    margin-top: 11rem;
   }
 
   .tour-image {
@@ -1296,8 +1314,9 @@ i {
     bottom: 0;
   }
 
-  .page-three-container {
-    padding-top: 0;
+  .tour-image-3 {
+    width: 20%;
+    bottom: 0;
   }
 
   .tour-folder {
